array.island.Island.scala.error
Erreur de compilation :
Island:5: error: identifier expected but integer literal found.
array[5] 
      ^Island:7: error: ']' expected but '}' found.
}
^