array.island.Island.scala.code
def island(num:Array[Int]): Int = {
}

array[5]